--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
     />
-    <title>⚡ CartProductApp</title>
+    <title>⚡ CartProductApp interview</title>
   </head>
 
   <body>
